Fix tab coloring bugs with multiple open profiles which used different colors.

Instead of caching based on incognito state, cache based on the actual colors
used.

This also fixes what I think was a real bug with not paying attention to a
changing stroke color.

BUG=616403
TEST=Install theme from bug comment 0, hit ctrl-T several times, open a window from a second, unthemed profile, hit ctrl-T more times, and verify the tab background color in the second wnidow is the default one and not the themed one.

Review-Url: https://codereview.chromium.org/2084583004
Cr-Commit-Position: refs/heads/master@{#401109}

Former-commit-id: 85c0fcf270d8f28720054c636748ad506e3a4078