chrome/browser/ui/views/tabs/tab_controller.h
@@ -98,11 +98,6 @@ class TabController {
   // in the same window will redraw on top of the the favicon area of any tab.
   virtual bool CanPaintThrobberToLayer() const = 0;
 
-  // Returns true if the tabs are in an incognito window.  This is used in
-  // determining which theme may have applied to them, so this determination
-  // should match the one in ThemeService::GetThemeProviderForProfile().
-  virtual bool IsIncognito() const = 0;
-
   // Returns true if tabs should be painted in the rectangular light-bar style.
   virtual bool IsImmersiveStyle() const = 0;
 
