chrome/browser/ui/views/tabs/tab_strip.h
@@ -233,7 +233,6 @@ class TabStrip : public views::View,
                          const ui::MouseEvent& event) override;
   bool ShouldPaintTab(const Tab* tab, gfx::Rect* clip) override;
   bool CanPaintThrobberToLayer() const override;
-  bool IsIncognito() const override;
   bool IsImmersiveStyle() const override;
   SkColor GetToolbarTopSeparatorColor() const override;
   int GetBackgroundResourceId(bool* custom_image) const override;
